<resources>
    <string name="app_name">Barcode</string>
    <string name="action_settings">Settings</string>
    <string name="food_outlet">Food Outlet</string>
    <string name="account">Account</string>
    <string name="account1">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="seasoning">Seasoning</string>
    <string name="other">Other</string>
    <string name="shopping">Shopping</string>
    <string name="orders">Orders</string>
    <string name="detail">Detail</string>
    <string name="back">Back</string>
    <string name="statement">Statement</string>
    <string name="presale">Presale</string>
    <string name="discount">Discount</string>
    <string name="language">Language/語言</string>
    <string name="notification">Notification of not submitted orders</string>
    <string name="notify_small">Notify your not submitted orders at 9:00PM</string>
    <string name="logout">Logout</string>
</resources>
