<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp"
            android:id="@+id/language"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:id="@+id/switch1" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="250sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="20sp"
                android:layout_marginBottom="20sp"
                android:id="@+id/textView14" />

            <TextView
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/notify_small"
                android:layout_marginLeft="10sp"
                android:textSize="15sp"
                android:id="@+id/textView13" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:background="@color/colorLogin"
            android:id="@+id/button" />
    </LinearLayout>
</LinearLayout>
