<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorLogin">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"
            android:src="@drawable/leftarrow_white"
            android:id="@+id/left_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/other"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:id="@+id/title" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/rightArrow"
            android:src="@drawable/right_arrow_white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/searchLayout"
        android:background="@color/Search_color"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="20dp"
            android:id="@+id/editText2"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">


        <FrameLayout
            android:id="@id/layout_contain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"></FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black_transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:id="@+id/txtShopping" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/orders"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:id="@+id/txtOrders" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:text="@string/account"
            android:id="@+id/txtAccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/action_settings"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:id="@+id/txtSettings" />
    </LinearLayout>
</LinearLayout>
