<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statement"
            android:id="@+id/txtStatement"
            android:layout_marginRight="40sp"
            android:textSize="30sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presale"
            android:id="@+id/txtPresale"
            android:textSize="33sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="30sp"
            android:id="@+id/textView15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp"
            android:src="@drawable/arrow_right"
            android:id="@+id/imageView5" />
    </LinearLayout>
</LinearLayout>
